--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@
 		background: transparent;
 }
 
+
 .sidebarForm .textarea {
 		height: 70px;
 		width: 320px;
@@ -63,11 +64,23 @@
 }
 
 .sidebarForm .textarea textarea {
-		width: 316px;
-		height: 66px;
+		width: 350px;
+		height: 100px;
 		background: white;
 		border: none;
 		resize:none;
+}
+
+.sidebarForm .select select {
+	width: 175px;
+	height: 20px;
+	overflow: hidden;
+	background: white;
+	border: solid 1px #DFE2E5;
+	margin: 5px 0 10px 10px;
+	box-shadow: 0 0 5px #ccc;
+	-webkit-box-shadow: 0 0 5px #ccc;
+	-moz-box-shadow: 0 0 5px #ccc;
 }
 
 .sidebarForm button {
